fixed first clockin